finished alignments in pages 2 and 3; fixed coloring in warning popup

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -131,11 +131,11 @@ body {
 }
 
 .dialog-preferred {
-	background-color: $pink-color;
+	background-color: $new-orange-color;
 }
 
 .dialog-nonpreferred {
-	background-color: $darkgrey-color;
+	background-color: grey;
 }
 
 .empty-div {
