--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -223,6 +223,10 @@
 	.btn.dropdown-toggle {
 		float: none;
 	}
+
+	input {
+		height: 47px;
+	}
 }
 
 // Override stuff for first page
